# goodpaul6.github.io

./: .clang-format  .env  .prettierrc.yaml  CNAME  Gemfile  _config.yml  about.markdown  escape.py  index.html  monokai.css  render.py  requirements.txt
_includes/asyncio/: CMakeLists.txt  example.cpp  helpers.cpp  helpers.hpp  io_context.cpp  io_context.hpp  socket.cpp  socket.hpp  test_main.cpp  timer.cpp  timer.hpp  unix_utils.cpp  unix_utils.hpp
_posts/: 2022-11-19-simple-async-io-in-cpp.markdown  2022-11-19-welcome-to-jekyll.markdown  2023-11-15-functions-that-know-too-much.markdown
docs/: index.html  styles.css
docs/simple-async-io-using-cpp/: README.html  index.html
simple-async-io-using-cpp/: README.md  example.cpp  index.html  socket.hpp
